--- a/app/views/free_insurances/_insurace.html.slim
+++ b/app/views/free_insurances/_insurace.html.slim
@@ -2,5 +2,5 @@
 = f.input :mobile
 = f.input :email
 = f.input :birthday, as: :date, html5: true
-= f.input :accepted
-= f.input :processed
+/ = f.input :accepted
+/ = f.input :processed
