--- a/app/views/free_insurances/show.html.slim
+++ b/app/views/free_insurances/show.html.slim
@@ -17,7 +17,10 @@
 
   hr
 
-  .alert.alert-info 领取成功后，保险公司将在3个工作日内以短信方式通知您。
+  .alert.alert-info
+    = fa_icon "exclamation-circle"
+    ' 
+    '领取成功后，保险公司将在3个工作日内以短信方式通知您。
 
   / = link_to 'Edit', edit_free_insurance_path(@free_insurance)
   / '|
