Add MetLift API for the insurance order submition.

--- a/app/views/free_insurances/_form.html.slim
+++ b/app/views/free_insurances/_form.html.slim
@@ -4,7 +4,7 @@
   .form-inputs
     = f.input :user
     = f.input :mobile
-    = f.input :birthday, as: :date
+    = f.input :birthday, as: :date, html5: true
     = f.input :processed
     = f.input :accepted
 
