--- a/app/views/free_insurances/_insurace.html.slim
+++ b/app/views/free_insurances/_insurace.html.slim
@@ -1,6 +1,7 @@
 = f.input :user
 = f.input :mobile
-= f.input :email
+= f.input :id_num
+/ = f.input :email
 = f.input :birthday, as: :date, html5: true
 / = f.input :accepted
 / = f.input :processed
