--- a/app/views/free_insurances/validate_result_of.html.slim
+++ b/app/views/free_insurances/validate_result_of.html.slim
@@ -7,7 +7,7 @@
       = notice
       a.close type="button" data-dismiss="alert" &times;
   - elsif alert
-    #notice.alert.alert-error
+    #notice.alert.alert-danger
       = alert
       a.close type="button" data-dismiss="alert" &times;
 
@@ -17,11 +17,20 @@
 
   hr
 
-  .alert.alert-info
-    = fa_icon "exclamation-circle"
-    ' 
-    '领取成功后，保险公司将在3个工作日内以短信方式通知您。您可以随时在本公众平台查询保险订单记录。
+  h3
+    span.label.label-primary.block
+      '申请记录
+      span.badage
+      - if @free_insurance.accepted
+        = fa_icon "check"
+      - else
+        = fa_icon "remove"
 
-  / = link_to 'Edit', edit_free_insurance_path(@free_insurance)
-  / '|
-  / = link_to 'Back', free_insurances_path
+  h3
+    span.label.label-success.block
+      '保单生效
+      span.badage
+      - if @free_insurance.processed
+        = fa_icon "check"
+      - else
+        = fa_icon "remove"
