--- a/app/assets/stylesheets/free_insurances.scss
+++ b/app/assets/stylesheets/free_insurances.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the FreeInsurances controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.terms {
+  position: absolute;
+  right: 25px;
+  bottom: 105px;
+}
