--- a/app/views/free_insurances/_insurace.html.slim
+++ b/app/views/free_insurances/_insurace.html.slim
@@ -2,6 +2,6 @@
 = f.input :mobile
 = f.input :id_num
 / = f.input :email
-= f.input :birthday, as: :date, html5: true
+/ = f.input :birthday, as: :date, html5: true
 / = f.input :accepted
 / = f.input :processed
