--- a/app/views/free_insurances/new.html.slim
+++ b/app/views/free_insurances/new.html.slim
@@ -33,8 +33,8 @@
       = f.input :birthday, as: :date, start_year: Date.today.year - 60,
                 end_year: Date.today.year - 18, html5: true
       = f.input :city, disabled: true, value: "成都市", placeholder: "成都市"
-      = f.input :accepted_terms, as: :boolean, checked_value: true, unchecked_value: false
-      = f.input :accepted_notices, as: :boolean, checked_value: true, unchecked_value: false
+      = f.input :accepted_all_terms, as: :boolean, checked_value: true, unchecked_value: false
+      = link_to '须知与条款详情', all_terms_path, class: 'terms'
     hr
     .form-actions
       = button_tag(type: 'submit', class: "btn btn-primary btn-lg btn-block") do
