--- a/app/views/free_insurances/show.html.slim
+++ b/app/views/free_insurances/show.html.slim
@@ -20,7 +20,7 @@
   .alert.alert-info
     = fa_icon "exclamation-circle"
     ' 
-    '领取成功后，保险公司将在3个工作日内以短信方式通知您。您可以随时在本公众平台查询保险订单记录。
+    '领取成功后，保险公司将在3个工作日内以短信方式通知您。您可以随时在本公众平台查询产品订单记录。为充分提升保障利益，此保障由4份计划构成。您会收到四份单独的保单凭证号。同时您可通过：我的产品》产品验真，登录产品提供方的界面，进行4份计划的单独产品验真。
 
   / = link_to 'Edit', edit_free_insurance_path(@free_insurance)
   / '|
