add the version number into layout.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,3 +22,5 @@ html
     .container
       .row
         = yield
+        .col-xs-12.col-sm-12.col-md-12.col-lg-12
+         p.text-right.text v1.0.0
