add the qcode of metlife and change to v1.0.2

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,4 +23,4 @@ html
       .row
         = yield
         .col-xs-12.col-sm-12.col-md-12.col-lg-12
-         p.text-right.text v1.0.0
+         p.text-right v1.0.2
