--- a/app/views/free_insurances/new.html.slim
+++ b/app/views/free_insurances/new.html.slim
@@ -34,7 +34,29 @@
                 end_year: Date.today.year - 18, html5: true
       = f.input :city, disabled: true, value: "成都市", placeholder: "成都市"
       = f.input :accepted_all_terms, as: :boolean, checked_value: true, unchecked_value: false
-      = link_to '投保须知详情', all_terms_path, class: 'terms'
+      / = link_to '投保须知详情', all_terms_path, class: 'terms'
+      / The toggler of the details.
+      a.terms data-toggle="modal" data-target="#myModal" 投保须知详情
+
+      / Modal content
+      .modal.fade id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        .modal-dialog role="document"
+          .modal-content
+            .modal-header
+              button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                span aria-hidden="true" &times;
+              h4.modal-title.text-primary id="myModalLabel" 投保须知
+            .modal-body
+              ol
+                li 本计划领取志愿者年龄为：18-60岁
+                li 本计划仅限志愿者本人领取并享有。
+                li 本计划每个志愿者限领取一份。
+                li 本计划中，航空意外保障不包含飞机飞行员及机上服务人员、水陆公共交通意外保障不包含交通工具驾驶人员及服务人员。 
+                li 
+                  | 如果志愿者已从公费医疗、社会医疗保险取得了医疗费用补偿，本计划将按如下公式给付意外伤害住院医疗费用补偿：意外伤害住院医疗费用补偿=该意外伤害事故发生之日起一百八十日内已支出的、必要且合理的住院医疗费用-任何已获得的住院医疗费用补偿；如果志愿者未从公费医疗、社会医疗保险取得医疗费用补偿，本计划将按如下公式给付意外伤害住院医疗费用补偿：意外伤害住院医疗费用补偿 = 该意外伤害事故发生之日起一百八十日内已支出的、必要且合理的住院医疗费用-任何已获得的住院医疗费用补偿）×90%；同时意外伤害住院医疗费用补偿将以1000元为补偿上限。
+                li 本计划领取并生效后，不予退出。计划生效后三个工作日内，中美联泰大都会将通过短信通知志愿者。
+
+
     hr
     .form-actions
       = button_tag(type: 'submit', class: "btn btn-primary btn-lg btn-block") do
